# Nemu

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_watcher.rs  lib.rs  main.rs
