[package]
name = "nemu"
version = "0.1.0"
description = "Your tiny working memory."
authors = ["Rain"]
edition = "2021"

[lib]
name = "nemu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
